Finish functions for WDPA part, add corrected files from Brodie

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 # Ignore contents of derived private folder, with the exception of its readme file
 data/derived/private/**
 !readme.md
+data/derived/public/pa_groups.*
 
 # Ignore contents of raw private folder, with the exception of its readme file
 data/raw/private/**
